--- a/src/index.css
+++ b/src/index.css
@@ -184,3 +184,8 @@ textarea {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
+
+.perspective-1000 {
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
+}
